[project]
name = "fastapi-pgqueuer"
version = "0.3.0"
description = "FastAPI + Gunicorn/Uvicorn + Redis session store + pgqueuer background jobs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",  # ASGI server (Gunicorn worker class)
    "gunicorn>=22.0.0",           # OS-level process manager
    "asyncpg>=0.29.0",            # Async PostgreSQL driver (pgqueuer only)
    "pgqueuer>=0.13.0",           # PostgreSQL-native background job queue
    "redis>=5.0.0",               # Async Redis driver — chat session store
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
